2006-01-09  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: up soname after breaking bin compat earlier

2006-01-09  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (xine_try_error):
	Yield so that we can receive the async errors before trying to get
	the crummy default xine_open error, don't know why anyone removed
	that call from xine-lib...
	Fixed double error dialogue

2006-01-09  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_write_m3u),
	(totem_pl_parser_get_extinfo_title), (totem_pl_parser_add_m3u):
	Parser fixes for the m3u reader and writer
	- fix parsing if there's no "," in the EXTINF line
	- write EXTINF if there is a custom title
	- bazillion of memleak fixes in the m3u writer
	- write what we set out to write in the m3u writer
	(the buf, not the url...) (Closes: #326310)

2006-01-09  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.in:
	  Fix GStreamer-0.10 plugin checks for the uninstalled
	  case, patch by Michael Smith <msmith@fluendo.com>
	 (Closes: #326339).

2006-01-09  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_num_entries),
	(totem_pl_parser_write_pls), (totem_pl_parser_write_m3u):
	* src/plparse/totem-pl-parser.h:
	* src/totem-playlist.c: (totem_playlist_save_get_iter_func),
	(totem_playlist_set_title): Only save the title for custom filenames,
	Don't override the title when there's already a custom title
	(Closes: #324975)

2006-01-09  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new):
	  Remove full stop at end of string to make it match
	  the one in the 0.8 backend (#325285).

2006-01-09  Bastien Nocera  <hadess@hadess.net>

	* src/backend/video-utils.c:
	(totem_gdk_window_set_invisible_cursor): Fix warning on exit
	when hiding the cursor

2006-01-09  Bastien Nocera  <hadess@hadess.net>
