@@ -13,6 +13,7 @@ New features and significant updates in version...
  * Add a test program for the properties page
  * Fix warning on exit when in fullscreen
  * Support Flash Video files
+ * Update libegg from CVS
  * Fix double error dialogues on open sometimes (xine-lib)
  * Check for plugins in configure (GStreamer)
 
