@@ -1,3 +1,13 @@
+2006-01-10  Bastien Nocera  <hadess@hadess.net>
+
+	* NEWS: upd
+	* src/egg-recent-model.c: (parse_info_init), (parse_info_free),
+	(end_element_handler), (egg_recent_model_filter),
+	(egg_recent_model_read), (egg_recent_model_lock_file),
+	(egg_recent_model_unlock_file), (egg_recent_model_get_list):
+	* src/egg-recent-view-gtk.c: (egg_recent_view_gtk_clear):
+	update from libegg CVS
+
 2006-01-09  Bastien Nocera  <hadess@hadess.net>
 
 	* NEWS: upd
